Trying to fix CSS on Safari

--- a/styles.css
+++ b/styles.css
@@ -718,11 +718,25 @@ SHAPES
         text-align: center;
     }
 
+    .project__description--links {
+        display: flex;
+        justify-content: center;
+    }
+
+    .project__description--title {
+        font-size: 32px;
+        line-height: 1;
+        text-align: center;
+    }
+
     .project__description--sub-title {
-        margin-bottom: 8px;
+        text-align: center;
+        margin: 12px 0;
+        /* margin-bottom: 8px; */
     }
 
     .modal__half {
+        text-align: center;
         padding: 40px;
     }
 }
